--- a/src/components/stylesheet.css
+++ b/src/components/stylesheet.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css?family=Montserrat:400,600,700&display=swap');
+
+* {
+  font-family: 'Monteserrat', Helvetica, sans-serif;
+}
+
 /* * {
   margin: 0;
   padding: 0;
