--- a/src/components/stylesheet.css
+++ b/src/components/stylesheet.css
@@ -5,6 +5,12 @@
 }
 
 body {
+  background-color: black;
+  background: url('../assets/fireside.jpg') no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
   height: 100%;
   width: 100%;
 }
@@ -43,14 +49,11 @@ body {
 }
 
 .Login {
-  background: url('../assets/MountainTentLg.jpg') no-repeat center center fixed;
-  position: fixed;
-  top: 0;
-  left: 0;
-
-  /* Preserve aspet ratio */
-  min-width: 100%;
-  min-height: 100%;
+  /* background: url('../assets/fireside.jpg') no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover; */
 
   display: flex;
   flex-direction: column;
@@ -59,28 +62,51 @@ body {
 }
 
 .Login form {
-  width: 30%;
+  width: 350px;
+  position: absolute;
+  bottom: 550px;
+}
+
+.login-btns {
+  display: flex;
+  height: 50px;
+}
+
+button {
+  padding: 0 0;
+  width: 200px;
+  text-align: left;
+}
+
+button a {
+  text-decoration: none;
+  color: whitesmoke;
+}
+
+button a:hover {
+  text-decoration: none;
+  color: whitesmoke;
 }
 
 .Login input {
   font-size: 1.4em;
-  opacity: 0.6;
-  margin-top: 1em;
-  border: 1px solid #989898;
+  opacity: 0.5;
+  margin-top: 0.6em;
+  color: whitesmoke;
 }
 
-.Login a {
-  margin-left: 35%;
-  /* color: rgb(25, 90, 143); */
-  font-size: 1.1em;
-  /* opacity: 0.6; */
-}
-
-.Login button {
+.Login .btn {
   font-size: 1.3em;
   opacity: 0.8;
   color: whitesmoke;
   background-color: rgb(25, 90, 143);
+  margin-left: 10px;
+  margin-right: 10px;
+  border: none;
+}
+
+.Login .btn a {
+  margin: 0;
 }
 
 .Signup {
@@ -105,6 +131,8 @@ body {
   flex-direction: column;
   align-items: center;
   color: whitesmoke;
+  width: 100%;
+  height: 100%;
 }
 
 .Landing h1 {
